--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -7,24 +7,29 @@ body {
   flex-direction: column;
   height: 100vh;
   margin: 0;
-  padding: 2rem;
   font-family: $font-family-sans-serif;
   font-size: 16px;
   line-height: 24px;
   background-color: $uoc-bg;
   color: $uoc-corporate;
 }
-
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
+  ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 }
+
+
+
+
 
 .uoc-logo {
   display: block;
@@ -34,7 +39,7 @@ body {
   max-width: 200px;
   height: auto;
 
-  @media (min-width: $mqMinWidth) {
+  @media (min-width: $mq-min-width) {
     max-width: none;
   }
 }
@@ -45,13 +50,120 @@ body {
   font-weight: 700;
   color: $uoc-corporate;
 
-  @media (min-width: $mqMinWidth) {
+  @media (min-width: $mq-min-width) {
     font-size: 36px;
   }
 }
 
-.uoc-footer {
-  margin-top: 1.5rem;
-  font-size: 0.75rem;
+.container {
+  margin: 0 auto;
+}
+
+//poster
+.poster {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr auto;
+  grid-gap: 20px;
+  padding: 20px;
+  background-color: #f2f2f2;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.h1poster {
+  grid-column: 1 / span 2;
+  font-size: 2.5rem;
   text-align: center;
 }
+
+.poster.uoc-logo {
+  max-width: 100%;
+  height: auto;
+}
+
+.img-poster {
+  grid-row: 2;
+  max-width: 100%;
+  height: auto;
+}
+
+.info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  grid-row: 2 / span 1;
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  text-align: center;
+  .card-title {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  .card-text {
+    font-size: 1.2rem;
+    margin: 0;
+  }
+}
+.pposter {
+  grid-row: 3;
+  font-size: 1.2rem;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 10px;
+  margin: 0;
+  }
+.pdiv {
+  text-align: center;
+  justify-content: centerd;
+}
+@supports not (display: grid) {
+  .poster {
+    display: block;
+    padding: 20px;
+    background-color: #f2f2f2;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  }
+  .h1poster {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .uoc-logo {
+    max-width: 100%;
+    height: auto;
+  }
+  .img-poster {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .card {
+    background-color: #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+    .card-title {
+      font-size: 1.5rem;
+      margin: 0;
+    }
+    .card-text {
+      font-size: 1.2rem;
+      margin: 0;
+    } 
+  }
+  .pposter {
+    font-size: 1.2rem;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    margin: 0;
+  }
+}
+
