--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,7 +8,8 @@
  */
 
 @import "variables";
-
+@import "~bootstrap/scss/bootstrap";
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 /**
  * Import npm dependencies
  * see: https://v2.parceljs.org/features/module-resolution/
@@ -23,7 +24,8 @@
  * It's a best practice to use a different partial for each page
  */
 
-@import "layouts/home";
+@import "layouts/home", "layouts/form", "layouts/article", "layouts/us";
+
 
 /**
  * Do NOT include anything else in this file!
